--- a/Complete Site.html
+++ b/Complete Site.html
@@ -11,5 +11,7 @@
         <a href="Resume.html">Bria's Resume</a>
         <a href="Favorite Websites.html">Bria's Favorite Websites</a>
         <a href="Picture Gallery.html">Bria's Picture Gallery</a>
+        <br><br>
+        <footer>&copy; Copyright 2020 <HTML class="am"></HTML></footer>
     </body>
 </html>
